--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,14 +5,15 @@
     "node": true,
     "mongo": true,
     "browser": true,
-    "es6": true
+    "es6": true,
+    "jest/globals": true
   },
-  "plugins": ["prettier", "standard", "unicorn"],
+  "plugins": ["prettier", "unicorn", "jest"],
   "extends": [
-    "standard",
     "prettier/standard",
-    "eslint:recommended",
-    "prettier"
+    "prettier",
+    "airbnb-base",
+    "plugin:jest/recommended"
   ],
   "parser": "babel-eslint",
   "parserOptions": {
@@ -30,6 +31,12 @@
     "no-console": "off",
     "no-unused-vars": "warn",
     "prefer-const": "warn",
+    "no-restricted-syntax": "off",
+    "newline-per-chained-call": "off",
+    "consistent-return": "off",
+    "comma-dangle": ["error", { "functions": "never" }],
+
+    "jest/expect-expect": "off",
 
     "unicorn/better-regex": "error",
     "unicorn/catch-error-name": "error",
@@ -85,5 +92,8 @@
     "unicorn/prevent-abbreviations": "error",
     "unicorn/string-content": "off",
     "unicorn/throw-new-error": "error"
+  },
+  "globals": {
+    "page": "readonly"
   }
 }
