--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,26 @@
 language: node_js
-node:
-  - 12.16.3
-cache: npm
-
+dist: trusty
+addons:
+  chrome: stable
+notifications:
+  email: false
+cache:
+  directories:
+    - node_modules
+sudo: required
+node_js:
+  - "10.15.3"
+env:
+  global:
+    - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+# allow headful tests
+before_install:
+  # Enable user namespace cloning
+  - "sysctl kernel.unprivileged_userns_clone=1"
+  # Launch XVFB
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
 install:
-  - npm ci
-
-script: 
-  - npm test
+  - npm i
+script:
+  - npm run test
