--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ node_js:
 env:
   global:
     - PUPPETEER_SKIP_CHROMIUM_DOWNLOAD=true
+    - HEADLESS=true
 # allow headful tests
 before_install:
   # Enable user namespace cloning
