--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-dist: trusty
+dist: xenial
 addons:
   chrome: stable
 notifications:
@@ -9,13 +9,12 @@ cache:
     - node_modules
 sudo: required
 node_js:
-  - "10.15.3"
+  - "12.16.3"
+services: xvfb
 before_install:
   # Enable user namespace cloning
+  - export CHROME_DEVEL_SANDBOX=/usr/local/sbin/chrome-devel-sandbox
   - "sysctl kernel.unprivileged_userns_clone=1"
-  # Launch XVFB
-  - "export DISPLAY=:99.0"
-  - "sh -e /etc/init.d/xvfb start"
 install:
   - npm i
 script:
