--- a/package.json
+++ b/package.json
@@ -41,7 +41,9 @@
     "jest-puppeteer": "^4.4.0",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
-    "puppeteer": "^4.0.0"
+    "puppeteer": "^4.0.0",
+    "puppeteer-extra": "^3.1.9",
+    "puppeteer-extra-plugin-stealth": "^2.4.9"
   },
   "dependencies": {
     "axios": "^0.19.2",
