--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@babel/cli": "^7.10.3",
     "@babel/core": "^7.10.3",
     "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@bengo923/puppeteer-extra-plugin-stealth": "^1.0.0",
     "babel-eslint": "^10.1.0",
     "babel-jest": "^26.1.0",
     "eslint": "^7.2.0",
@@ -42,8 +43,7 @@
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "puppeteer": "^4.0.0",
-    "puppeteer-extra": "^3.1.9",
-    "puppeteer-extra-plugin-stealth": "^2.4.9"
+    "puppeteer-extra": "^3.1.9"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -51,6 +51,7 @@
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "puppeteer-extra-plugin-stealth": "^2.4.9"
   }
 }
