--- a/.travis.yml
+++ b/.travis.yml
@@ -1,10 +1,13 @@
-# language: node_js
-# node:
-#   - 12.16.3
-# cache: npm
-
-# install:
-#   - npm ci
-
-# script: 
-#   - npm test
+language: node_js
+dist: xenial
+cache:
+  directories:
+    - node_modules
+sudo: required
+node_js:
+  - lts/*
+  - node
+install:
+  - npm i
+script:
+  - npm run test:prod
