--- a/package.json
+++ b/package.json
@@ -4,8 +4,13 @@
   "description": "price-checker-backend",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
-    "test": "jest"
+    "start:dev": "nodemon ./src/index.js",
+    "start:prod": "node ./src/index.js",
+    "test:prod": "npm run build && jest ./build/tests --env=node",
+    "test:dev": "jest ./src/tests --env=node",
+    "build": "npm run clear && npm run babel-build",
+    "babel-build": "babel -d ./build ./src -s",
+    "clear": "rm -rf ./build && mkdir build"
   },
   "repository": {
     "type": "git",
@@ -18,26 +23,36 @@
   },
   "homepage": "https://github.com/octavian-regatun/price-checker-backend#readme",
   "devDependencies": {
+    "@babel/cli": "^7.10.3",
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
     "babel-eslint": "^10.1.0",
-    "eslint": "^7.3.0",
+    "babel-jest": "^26.1.0",
+    "eslint": "^7.2.0",
+    "eslint-config-airbnb-base": "^14.2.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-config-standard": "^14.1.1",
     "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.16.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-prettier": "^3.1.4",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-unicorn": "^20.1.0",
     "jest": "^26.0.1",
     "nodemon": "^2.0.4",
     "prettier": "^2.0.5"
   },
   "dependencies": {
-    "axios": "^0.19.2",
     "body-parser": "^1.19.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
+    "delay": "^4.3.0",
     "dotenv": "^8.2.0",
-    "express": "^4.17.1"
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.0"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "!./build/*"
+    ]
   }
 }
