--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "delay": "^4.3.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "http": "0.0.1-security",
     "node-fetch": "^2.6.0"
   },
   "jest": {
