--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
-    "node-fetch": "^2.6.0"
+    "node-fetch": "^2.6.0",
+    "price-checker-api": "^0.2.1"
   },
   "jest": {
     "collectCoverageFrom": [
