--- a/package.json
+++ b/package.json
@@ -17,18 +17,13 @@
   },
   "homepage": "https://github.com/octavian-regatun/price-checker-backend#readme",
   "devDependencies": {
-    "eslint": "^7.2.0",
-    "eslint-config-airbnb-base": "^14.2.0",
+    "eslint": "^7.4.0",
     "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-import": "^2.21.2",
-    "eslint-plugin-jest": "^23.16.0",
-    "eslint-plugin-node": "^11.1.0",
+    "eslint-config-xo": "^0.32.0",
     "eslint-plugin-prettier": "^3.1.4",
-    "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-unicorn": "^20.1.0",
-    "jest": "^26.0.1",
     "nodemon": "^2.0.4",
-    "prettier": "^2.0.5"
+    "prettier": "^2.0.5",
+    "xo": "^0.32.1"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
@@ -38,12 +33,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "mongoose": "^5.9.20",
     "node-fetch": "^2.6.0",
-    "price-checker-api": "^0.2.1"
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "!./build/*"
-    ]
+    "price-checker-api": "^0.4.1"
   }
 }
