--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "body-parser": "^1.19.0",
+    "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
     "cors": "^2.8.5",
     "delay": "^4.4.0",
