--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "price-checker-backend",
   "main": "index.js",
   "scripts": {
-    "start:dev": "nodemon ./src/index.js"
+    "start:dev": "nodemon ./src/index.js",
+    "start:gc": "npx @google-cloud/functions-framework --target=helloWorld"
   },
   "repository": {
     "type": "git",
@@ -26,6 +27,7 @@
     "xo": "^0.32.1"
   },
   "dependencies": {
+    "@google-cloud/functions-framework": "^1.7.0",
     "body-parser": "^1.19.0",
     "chalk": "^4.1.0",
     "cheerio": "^1.0.0-rc.3",
