--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "http": "0.0.1-security",
+    "moment": "^2.27.0",
     "mongoose": "^5.9.27",
     "node-fetch": "^2.6.0",
     "price-checker-api": "^0.4.3"
